# coronavirus

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
coronavirus/: UK-data_2021-Mar-05.csv  eda-france.py  eda-population.py  extraction.py  fft.py  france_uk.py  main.py  models.py  test.py  tsdata.py  tsmodels.py  tswindow.py  visualization.py
coronavirus/doc/: chronologie.md  demographic-by-region.csv  demographic-data.md  estim-pop-dep-sexe-aq-1975-2021.xls  estim-pop-nreg-sexe-aq-1975-2021.xls  metropole-epci.csv  pyramid-by-dep-female.csv  pyramid-by-dep-male.csv  pyramid-by-dep.csv  pyramid.csv
coronavirus/logs/MultipleStepRNN/20201221-100350/train/: events.out.tfevents.1608541430.clem-MS-7B24.122017.571.v2
coronavirus/logs/MultipleStepRNN/20201221-101055/train/: events.out.tfevents.1608541855.clem-MS-7B24.122308.231.v2
coronavirus/logs/MultipleStepRNN/20201221-101414/train/: events.out.tfevents.1608542054.clem-MS-7B24.123471.231.v2
coronavirus/logs/MultipleStepRNN/20201221-101450/train/: events.out.tfevents.1608542090.clem-MS-7B24.123869.231.v2
coronavirus/logs/MultipleStepRNN/20201221-101546/train/: events.out.tfevents.1608542146.clem-MS-7B24.123869.488.v2  events.out.tfevents.1608542147.clem-MS-7B24.profile-empty
coronavirus/logs/MultipleStepRNN/20201221-101546/train/plugins/profile/2020_12_21_10_15_47/: clem-MS-7B24.input_pipeline.pb  clem-MS-7B24.overview_page.pb  clem-MS-7B24.tensorflow_stats.pb  (+1 more)
coronavirus/logs/MultipleStepRNN/20201221-101546/validation/: events.out.tfevents.1608542147.clem-MS-7B24.123869.2963.v2
